src/test/deca/context/invalid/BadExtendsString.deca
class A extends String{
    float x;
    x = 1.2f;
}